# det_sort

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bank  README.md  logging.h  main.cpp  object.proto  run.cpp  run.h  subscribe.cpp  subscribe.h  yolox.cpp  yolox.h
config/: config.txt  config.yaml
deepsort/include/: deepsort.h  logging.h  manager.hpp
deepsort/src/: deepsort.cpp  manager.cpp
